# RAG-the-philosophical-computer

./: .gitignore  README.md  main.py  pyproject.toml
latex-files/: main.tex
output/: poem.md  summary.md
