[project]
name = "final-project"
version = "0.1.0"
description = "Final Project for AI Course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "fpdf2>=2.8.5",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=1.0.0",
    "pypdf>=6.4.0",
    "sentence-transformers>=5.1.2",
]
